<resources>
    <string name="app_name">RedBlueFragments_RandomNumber</string>
    <string name="hello_red_fragment">This is the red fragment</string>
    <string name="hello_blue_fragment">This is the blue fragment</string>
    <string name="send_a_random_number_to_the_blue_fragment">Send a random number to the blue fragment</string>
    <string name="choice_a_resource">Choice A</string>
    <string name="choice_b_resource">Choice B</string>
    <string name="count_resource">count</string>
</resources>