<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/red_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_light"
    tools:context=".RedFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_red_fragment"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/send_random_number_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_a_random_number_to_the_blue_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/choice_a_button"
        android:layout_width="204dp"
        android:layout_height="144dp"
        android:text="@string/choice_a_resource"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/choice_b_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_random_number_button"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/choice_b_button"
        android:layout_width="204dp"
        android:layout_height="144dp"
        android:text="@string/choice_b_resource"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/choice_a_button"
        app:layout_constraintTop_toBottomOf="@+id/send_random_number_button"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/count_a_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_resource"
        app:layout_constraintBottom_toTopOf="@+id/choice_a_button"
        app:layout_constraintEnd_toEndOf="@+id/choice_a_button"
        app:layout_constraintStart_toStartOf="@+id/choice_a_button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/count_b_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="count"
        app:layout_constraintBottom_toTopOf="@+id/choice_b_button"
        app:layout_constraintEnd_toEndOf="@+id/choice_b_button"
        app:layout_constraintStart_toEndOf="@+id/choice_a_button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>